--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
 
 body {
     margin: 0;
+    font-family: 'Poppins', sans-serif;
 }
 
 nav {
@@ -13,8 +14,49 @@ nav {
     display: flex;
     padding:  20px 30px;
     box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
-
+}
+.gray {
+    color: #918E9B;
+}
+.bold{
+    font-weight: bold;
 }
 .nav--logo{
     max-width: 100px;
 }
+
+section{
+    padding: 20px;
+}
+
+.hero{
+    display: flex;
+    flex-direction: column;
+}
+.hero--photo{
+    max-width: 400px;
+    align-self: center;
+}
+.hero--header{
+    margin-bottom: 16px;
+}
+.hero--text{
+    margin-top: 0px;
+}
+.card{
+    width: 175px;
+    font-size: 12px;
+}
+
+.card--image{
+    width: 100%;
+    border-radius: 9px;
+}
+.card--stats{
+    display: flex;
+    align-items: center;
+}
+.card--star{
+    height: 14px;
+}
+
