--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap');
-
 * {
     box-sizing: border-box;
 }
@@ -12,51 +10,82 @@ body {
 nav {
     height: 70px;
     display: flex;
-    padding:  20px 30px;
+    padding: 20px 36px;
     box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
 }
+
+.bold {
+    font-weight: bold;
+}
+
 .gray {
     color: #918E9B;
 }
-.bold{
-    font-weight: bold;
-}
-.nav--logo{
+
+.nav--logo {
     max-width: 100px;
 }
 
-section{
+section {
     padding: 20px;
 }
 
-.hero{
+.hero {
     display: flex;
     flex-direction: column;
 }
-.hero--photo{
+
+.hero--photo {
     max-width: 400px;
     align-self: center;
 }
-.hero--header{
+
+.hero--header {
     margin-bottom: 16px;
 }
-.hero--text{
-    margin-top: 0px;
-}
-.card{
-    width: 175px;
-    font-size: 12px;
+
+.hero--text {
+    margin-top: 0;
 }
 
-.card--image{
-    width: 100%;
-    border-radius: 9px;
+.cards-list {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    overflow-x: auto;
 }
-.card--stats{
+
+.card {
+    width: 175px;
+    font-size: 12px;
+    flex: 0 0 auto;
+    display: flex;
+    flex-direction: column;
+}
+
+.card--image {
+    width: 100%;
+    max-height: 220px;
+    border-radius: 9px;
+    margin-bottom: 9px;
+}
+
+
+.card--title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.card--stats {
     display: flex;
     align-items: center;
 }
-.card--star{
+
+.card--star {
     height: 14px;
 }
 
+
+.card--price {
+    margin-top: auto;
+}
