--- a/src/style.css
+++ b/src/style.css
@@ -58,19 +58,20 @@ section {
 .card {
     width: 175px;
     font-size: 12px;
-    flex: 0 0 auto;
-    display: flex;
-    flex-direction: column;
+    flex: 0 0 auto;         /* ADD */
+    display: flex;          /* ADD */
+    flex-direction: column; /* ADD */
+    position: relative;
 }
 
 .card--image {
     width: 100%;
-    max-height: 220px;
+    height: 230px;
     border-radius: 9px;
     margin-bottom: 9px;
 }
 
-
+/* ADD */
 .card--title {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -85,7 +86,17 @@ section {
     height: 14px;
 }
 
-
+/* ADD */
 .card--price {
     margin-top: auto;
+}
+
+.card--badge {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    background-color: white;
+    padding: 5px 7px;
+    border-radius: 2px;
+    font-weight: bold;
 }
